# ML

./: Docker-compose.yml  main.py  pyproject.toml
mlflow-image/: Dockerfile
src/: data_loader.py  eval.py  models.py  preprocess.py  train_model.py
tests/: test_preprocess.py
